--- a/terrarium/index.html
+++ b/terrarium/index.html
@@ -69,5 +69,7 @@
             <div class="dirt"></div>
             <div class="jar-bottom"></div>
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
