[8주차 과제] 텍스트 내용 변경

--- a/home-week8/typing-game/index.html
+++ b/home-week8/typing-game/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title>Typing game</title>
+    <title>티니핑 말고 타이핑!</title>
     <!-- css 없이 먼저 html 생성 막기위해 제일 위? -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Typing game!</h1>
-    <p>Practice your typing skills with a quote from sherlock Holmes. Click **start** to begin!</p>
+    <h1>티니핑 말고 타이핑!</h1>
+    <p>유명 시 문구와 수능 필적환인란 문구를 타이핑해보세요. **start** 버튼을 누르면 시작됩니다!</p>
     <p id="best_score">최고기록: 아직 기록이 없습니다</p>
     <p id="quote"></p>
     <p id="message"></p>
